Include definition of list comprehension

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'names': 'rodrigo', 'age': 35}\n",
+      "{'names': 'renata', 'age': 34}\n",
+      "{'names': 'isabella', 'age': 2}\n",
+      "{'names': 'gabriella', 'age': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, item in family.iterrows():\n",
+    "    \n",
+    "    print(dict(item))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "names    rodrigo\n",
+       "age           35\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,8 +1185,7 @@
     "    \n",
     "    def __init__(self, dataframe):\n",
     "        \n",
-    "        self._dataframe = dataframe\n",
-    "        self._dict_list = self._dataframe.to_dict(orient='records')\n",
+    "        self._dataframe = dataframe.reset_index(drop=True)\n",
     "        self._index = 0\n",
     "        \n",
     "    def __iter__(self):\n",
@@ -1153,7 +1196,7 @@
     "        \n",
     "        try:\n",
     "            \n",
-    "            return self._dict_list[self._index]\n",
+    "            return dict(self._dataframe.loc[self._index])\n",
     "        \n",
     "        except:\n",
     "            \n",
@@ -1166,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1342,8 +1385,282 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como podemos ver nestes exemplos, a classe DataFrame é um iterator pela definição dos métodos necessários"
+    "Como podemos ver nestes exemplos, a classe DataFrame é um iterator pela definição dos métodos necessários (`__iter__`, `__next__`), enquanto que as demais são apenas iterables definindo somente o método `__iter__`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CREATING COLLECTIONS WITH COMPREHENSIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CRIANDO COLEÇÕES COM COMPREENSÕES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List comprehension é uma forma declarativa de alto nível para criar listas em python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = [n * n for n in range(6)]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Isto é exatamente equivalente ao seguinte:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = list() # ou squares = []\n",
+    "\n",
+    "for n in range(6):\n",
+    "    \n",
+    "    squares.append(n * n)\n",
+    "    \n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe que no primeiro exemplo, o que você digita está declarando que tipo de lista você quer, enquanto que no segundo está especificando como cria-la. \n",
+    "Por isso que nós dizemos que é uma forma alto nível e declarativa:Funciona como se vocês estivesse definindo que tipo de lista quer criar, e depois, deixa o Python descobrir como construi-la. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python permite escrever outros tipos de `comprehensions` além das listas. Segue um exemplo de `dictionary comprehension`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: '', 1: 'x', 2: 'xx', 3: 'xxx', 4: 'xxxx'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocks = { n: \"x\" * n for n in range(5)}\n",
+    "print(blocks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Isto é exatamente equivalente a fazer o seguinte:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: '', 1: 'x', 2: 'xx', 3: 'xxx', 4: 'xxxx'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocks = dict()\n",
+    "\n",
+    "for n in range(5):\n",
+    "    \n",
+    "    blocks[n] = 'x' * n\n",
+    "    \n",
+    "print(blocks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os principais benefícios das `comprehensions` são legibilidade e manutenibilidade. Muitas pessoas, acham elas muito legíveis; Mesmo desenvolvedores que nunca encontraram elas antes, podem na maioria das vezes adivinhar corretamente o que significa.\n",
+    "E além disso, há um benefício cognitivo mais profundo: Uma vez que você praticar um pouco, vai achar que pode escreve-las com pouquíssimo esforço mental - mantendo sua atenção livre para outras tarefas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List Comprehensions\n",
+    "\n",
+    "__`List comprehension` é a mais usada e util tipo de `comprehension`, e essencialmente é uma forma de criar e popular uma lista.__ Sua estrutura segue a seguinte expressão:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[ __EXPRESSION__ for __VARIABLE__ in __SEQUENCE__ ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*EXPRESSION* é qualquer expressão python, embora em compreensões, esta expressão tipicamente contenha uma variável. Esta variável é declarada no campo *VARIABLE*. *SEQUENCE* define a fonte dos valores pelos quais a variável itera, criando uma sequencia final de valores calculados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[0, 1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = [n * n for n in range(6)]\n",
+    "print(type(squares))\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def double_short_words(words):\n",
+    "    \n",
+    "    return [\n",
+    "        word + word\n",
+    "        for word in words\n",
+    "        if len(word) < 5\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['olaola', 'oleole', 'ovoovo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = 'ola ole ovo rodrigo bernardo medeiros'.split()\n",
+    "\n",
+    "double_small_words = double_short_words(words)\n",
+    "print(double_small_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
